# base_object

./: .codecov.yml  .flake8  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cancel.yml  cancel_on_status.yml  codeql-analysis.yml  test.yml
base_object/: __init__.py  exceptions.py
base_object/base/: __init__.py  _base.py  _clone.py
base_object/config/: __init__.py
base_object/config/tests/: __init__.py  test_config.py
base_object/registry/: __init__.py  _lookup.py  _tag_details.py
base_object/tests/: __init__.py  test_all_functionality.py
base_object/utils/: __init__.py  _check.py  _object_html_repr.py  _pprint.py
build_tools/: linting_dependencies.yml  test_dependencies.yml  test_env.yml
tests/: __init__.py
