[metadata]
description_file = README.md
long_description_content_type = text/markdown

[flake8]
# inline with Black code formatter
max-line-length = 88
inlines-quotes = double
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203, W503
exclude = .git, __pycache__, docs/source/conf.py

[bdist_wheel]
universal = false

[sdist]
formats = gztar
